Added test and model

--- a/app/views/home/about.jade
+++ b/app/views/home/about.jade
@@ -2,7 +2,7 @@
 extends ../shared/template
 block content
   h2 About Page!
-
+    p Synth chillwave semiotics, small batch drinking vinegar Truffaut umami kale chips photo booth Austin pork belly biodiesel forage. You probably haven't heard of them 8-bit fixie ethnic American Apparel, ethical Austin. Typewriter letterpress twee, crucifix polaroid freegan DIY dreamcatcher keffiyeh pork belly McSweeney's street art. Fanny pack craft beer gastropub hoodie, mumblecore try-hard Wes Anderson hashtag flexitarian jean shorts sustainable cornhole. Salvia 90's 8-bit next level. McSweeney's mustache locavore PBR beard, Thundercats bitters chillwave. Distillery Intelligentsia High Life, shabby chic freegan ethnic Austin.
 block scripts
   script(src='/js/user/home.js')
 
