--- a/app/views/home/contact.jade
+++ b/app/views/home/contact.jade
@@ -2,7 +2,7 @@
 extends ../shared/template
 block content
   h2 Contact Page!
-
+    p Bitters Brooklyn VHS, Shoreditch gentrify before they sold out flannel bespoke yr photo booth blog occupy. Vinyl Wes Anderson Helvetica, synth cred ugh occupy pug flannel tofu chambray Intelligentsia literally. Craft beer keffiyeh Portland normcore, single-origin coffee banjo chambray literally synth plaid skateboard Thundercats pop-up tousled readymade. Hoodie narwhal mustache, High Life polaroid Intelligentsia authentic readymade chambray Neutra keffiyeh VHS Godard retro quinoa. Polaroid Brooklyn crucifix, kale chips craft beer chia Marfa Echo Park twee artisan. Mumblecore Truffaut Bushwick, seitan disrupt Carles art party PBR&B cred actually fixie. Crucifix stumptown twee, salvia craft beer flexitarian meh Etsy small batch ennui banh mi +1.
 block scripts
   script(src='/js/user/home.js')
 
