--- a/app/views/home/faq.jade
+++ b/app/views/home/faq.jade
@@ -2,7 +2,7 @@
 extends ../shared/template
 block content
   h2 FAQ Page!
-
+    p Photo booth 8-bit fashion axe, paleo pop-up Godard locavore Odd Future High Life mixtape street art Schlitz. Tattooed try-hard YOLO paleo, forage Shoreditch tousled meh trust fund bespoke. Forage banjo occupy 90's. Wolf selvage post-ironic, brunch American Apparel skateboard Odd Future. Locavore paleo plaid cray Helvetica, iPhone biodiesel. Church-key dreamcatcher vegan, whatever Shoreditch iPhone meggings fanny pack readymade shabby chic banh mi fap High Life Bushwick. Banksy post-ironic mustache Shoreditch, gentrify plaid gluten-free pork belly flexitarian whatever food truck kogi narwhal salvia.
 block scripts
   script(src='/js/user/home.js')
 
