--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,12 +1,1 @@
-@import url(http://fonts.googleapis.com/css?family=Open+Sans);
-
-*{
-  font-family: 'Open Sans', sans-serif;
-  font-size: 13px;
-}
-
-body{
-
-}
-
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans);@import url(http://fonts.googleapis.com/css?family=Philosopher:700);body{background-color:#dccaca}h1{font-family:'Philosopher',sans-serif;font-size:40px}h2{font-family:'Philosopher',sans-serif;font-size:25px}#map{height:500px;padding:3px double gray}.form-inline .form-group{margin:20px}
