--- a/app/views/vacation/index.jade
+++ b/app/views/vacation/index.jade
@@ -1,6 +1,7 @@
+
 extends ../shared/template
 block content
   #map
 
 block scripts
-  script(src='/js/user/home.js')
+  script(src='/js/user/vacation.js')
