--- a/app/views/vacation/init.jade
+++ b/app/views/vacation/init.jade
@@ -10,11 +10,11 @@ block content
             input#name.form-control(type='text', placeholder='Going to Hawaii', name='name')
           .form-inline
             .form-group
-          label(for='from') From
-              input#from.form-control(type='date', placeholder='11/01/2014', name='from')
+          label(for='start') Start
+              input#start.form-control(type='date', placeholder='11/01/2014', name='start')
             .form-group
-          label(for='to') To
-              input#to.form-control(type='date', placeholder='11/10/2014', name='to')
+          label(for='end') End
+              input#end.form-control(type='date', placeholder='11/10/2014', name='end')
               br
               button.btn.btn-default(type='submit') Add Vacation
 
